# Cloe

./: README.md  pyproject.toml
app/: main.py
app/components/popups/: about.py
app/components/settings/tabs/: base.py
app/components/settings/tabs/hotkey/: container.py  tab.py
app/components/settings/tabs/view/: container.py  preview.py  tab.py
app/components/views/ocr/: base.py  fullscreen.py
app/components/windows/: external.py  tray.py
