[project]
name = "cloe"
version = "0.1.0"
description = "Manga OCR snipping tool"
authors = [{ name = "Alarcon Ace Belen" }]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqt5>=5.15.7",
    "pillow>=10.0.0",
    "manga-ocr>=0.1.14",
    "pynput>=1.7.6",
    "huggingface-hub>=0.26.0",
    "transformers>=4.40.0",
    "torch>=2.4.0",
]

[dependency-groups]
dev = ["pyinstaller>=6.14.2", "black>=24.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
